# RedImage

./: .gitignore  Build.bat  CMakeLists.txt  RedImage.Build.cs  RedImage.sln
RedImage/: CMakeLists.txt  RedColor.h  RedImage.hpp  RedImage2.cpp  RedTextureUtils.cpp  RedTextureUtils.h
RedImageTool/: RedImage.h  RedImage2.cpp  RedImageTool.vcxproj  RedMemery.h  RedTextureUtils.cpp
TestApp/: TestApp.cpp
bc7gpu/: bc7_gpu.h  bc7gpu.vcxproj  bc7gpu.vcxproj.filters
bc7gpu/CUDA/: bc7_cuda.cpp  bc7_cuda.h
ispc_texcomp/: kernel_astc_ispc.h  kernel_astc_ispc_avx.h  kernel_astc_ispc_avx2.h  kernel_astc_ispc_sse2.h  kernel_astc_ispc_sse4.h  kernel_ispc.h  kernel_ispc_avx.h  kernel_ispc_avx2.h  kernel_ispc_sse2.h  kernel_ispc_sse4.h
